K8S/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hotstar-deployment
spec:
  rules:
  - host: "hackerboypk.online"
    http:
      paths:
      - pathType: Prefix
        path: "/hotstar"
        backend:
          service:
            name: hotstar-service
            port:
              number: 3000
  - host: "*.hackerboypk.online"
    http:
      paths:
      - pathType: Prefix
        path: "/hotstar"
        backend:
          service:
            name: hotstar-service
            port:
              number: 3000
